# serializer version: 1
# name: test_string_concat_2
  dict({
    <class 'compiler.ast.Term'>: dict({
      'left': dict({
        <class 'compiler.ast.literals.StringLiteral'>: dict({
          'value': 'hello',
        }),
      }),
      'op': Token('PLUS', '+'),
      'right': dict({
        <class 'compiler.ast.literals.StringLiteral'>: dict({
          'value': 'world',
        }),
      }),
    }),
  })
# ---
# name: test_string_concat_2.1
  dict({
    <class 'compiler.ast.Term'>: dict({
      'fields': dict({
        'left': dict({
          <class 'compiler.ast.literals.StringLiteral'>: dict({
            'fields': dict({
            }),
            'type': <class 'compiler.langtypes.String'>,
          }),
        }),
        'right': dict({
          <class 'compiler.ast.literals.StringLiteral'>: dict({
            'fields': dict({
            }),
            'type': <class 'compiler.langtypes.String'>,
          }),
        }),
      }),
      'type': <class 'compiler.langtypes.String'>,
    }),
  })
# ---
# name: test_string_concat_3
  dict({
    <class 'compiler.ast.Term'>: dict({
      'left': dict({
        <class 'compiler.ast.literals.StringLiteral'>: dict({
          'value': 'hello',
        }),
      }),
      'op': Token('PLUS', '+'),
      'right': dict({
        <class 'compiler.ast.Term'>: dict({
          'left': dict({
            <class 'compiler.ast.literals.StringLiteral'>: dict({
              'value': ' ',
            }),
          }),
          'op': Token('PLUS', '+'),
          'right': dict({
            <class 'compiler.ast.literals.StringLiteral'>: dict({
              'value': 'world',
            }),
          }),
        }),
      }),
    }),
  })
# ---
# name: test_string_concat_3.1
  dict({
    <class 'compiler.ast.Term'>: dict({
      'fields': dict({
        'left': dict({
          <class 'compiler.ast.literals.StringLiteral'>: dict({
            'fields': dict({
            }),
            'type': <class 'compiler.langtypes.String'>,
          }),
        }),
        'right': dict({
          <class 'compiler.ast.Term'>: dict({
            'fields': dict({
              'left': dict({
                <class 'compiler.ast.literals.StringLiteral'>: dict({
                  'fields': dict({
                  }),
                  'type': <class 'compiler.langtypes.String'>,
                }),
              }),
              'right': dict({
                <class 'compiler.ast.literals.StringLiteral'>: dict({
                  'fields': dict({
                  }),
                  'type': <class 'compiler.langtypes.String'>,
                }),
              }),
            }),
            'type': <class 'compiler.langtypes.String'>,
          }),
        }),
      }),
      'type': <class 'compiler.langtypes.String'>,
    }),
  })
# ---
